--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animated_bottom_navigation_bar: ^0.3.2
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
