--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
   animated_bottom_navigation_bar: ^0.3.2
+  cloud_firestore: ^2.4.0
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.0.1
+  firebase_core: ^1.4.0
   google_fonts: ^2.1.0
   provider: ^5.0.0
+  rename: ^1.3.1
 
 dev_dependencies:
   flutter_test:
