--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
+  flutter_spinkit: ^5.0.0
   google_fonts: ^2.1.0
   provider: ^5.0.0
   rename: ^1.3.1
