--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   animated_bottom_navigation_bar: ^0.3.2
+  carousel_slider: ^4.0.0
   cloud_firestore: ^2.4.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.0.1
