--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_core: ^1.4.0
   flutter_spinkit: ^5.0.0
   google_fonts: ^2.1.0
+  intl: ^0.17.0
   provider: ^5.0.0
   rename: ^1.3.1
 
