--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,19 +21,21 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   animated_bottom_navigation_bar: ^0.3.2
+  cached_network_image: ^3.1.0
   carousel_slider: ^4.0.0
   cloud_firestore: ^2.4.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
+  flutter:
+    sdk: flutter
   flutter_spinkit: ^5.0.0
   google_fonts: ^2.1.0
   intl: ^0.17.0
   provider: ^5.0.0
   rename: ^1.3.1
+  shimmer_animation: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
