--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   animated_bottom_navigation_bar: ^0.3.2
+  another_flushbar: ^1.10.24
   cached_network_image: ^3.1.0
   carousel_slider: ^4.0.0
   cloud_firestore: ^2.4.0
