--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.0.0
+  flutter_swiper: ^1.1.6
   google_fonts: ^2.1.0
   intl: ^0.17.0
   provider: ^5.0.0
